--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 <section class="middle-body ">
-<div class="mid d-flex row">
+<div class="mid d-flex ">
     <div class="col-md-5 mid-first">
       <h2 class="featurette-heading fw-normal lh-1">Social Service Club </h2>
       <p></p>
