--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </div>
           
           <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-            <li><a href="http://127.0.0.1:3000/project/index.html" class="nav-link px-3.5 link-secondary">Home</a></li>
+            <li><a href="https://utkaaarsh.github.io/ssc-iitg/" class="nav-link px-3.5 link-secondary">Home</a></li>
             <li><a href="#" class="nav-link px-3.5">team</a></li>
             <li><a href="#" class="nav-link px-3.5">events</a></li>
             <li><a href="#" class="nav-link px-3.5">About</a></li>
