--- a/teams.html
+++ b/teams.html
@@ -17,7 +17,7 @@
 
         <div class="column">
             <div class="card">
-              <img src="utkarsh 1.png" alt="Mike" style="width:100%">
+              <img src="./ssc/utkarsh 1.png" alt="Mike" style="width:100%">
               <div class="container">
                 <h2>Utkarsh singh</h2>
                 <p class="title">Secretary</p>
@@ -32,7 +32,7 @@
   
     <div class="column">
       <div class="card">
-        <img src="sak 1 (1).png" alt="Mike" style="width:100%" >
+        <img src="./ssc/sak 1 (1).png" alt="Mike" style="width:100%" >
         <div class="container">
           <h2>Sakshi Sakhare</h2>
           <p class="title">Joint secretary</p>
