--- a/teams.html
+++ b/teams.html
@@ -81,7 +81,7 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="tan.png" alt="Mike" style="width:100%" >
+          <img src="ssc/tan.png" alt="Mike" style="width:100%" >
           <div class="container">
             <h2>Tanushree Deogade</h2>
             <p class="title">Design head</p>
