--- a/teams.html
+++ b/teams.html
@@ -46,7 +46,7 @@
   
     <div class="column">
       <div class="card">
-        <img src="sush.jpg" alt="John" style="width:100%" >
+        <img src="ssc/sush.jpg" alt="John" style="width:100%" >
         <div class="container">
           <h2>Sushant Swarup</h2>
           <p class="title">Marketing and outreach head</p>
@@ -57,7 +57,7 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="ayush 1 (1).png" alt="Mike" style="width :100%" >
+          <img src="ssc/ayush 1 (1).png" alt="Mike" style="width :100%" >
           <div class="container">
             <h2>Ayush Tiwari</h2>
             <p class="title">Event head</p>
@@ -69,7 +69,7 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="saurabh 1 (4).png" alt="Mike" style="width:100%">
+          <img src="ssc/saurabh 1 (4).png" alt="Mike" style="width:100%">
           <div class="container">
             <h2>Saurabh Kumar</h2>
             <p class="title"></p>
@@ -93,7 +93,7 @@
       </div>
       <div class="column">
         <div class="card">
-          <img src="sayan1 2.png" alt="Mike" style="width:100%">
+          <img src="ssc/sayan1 2.png" alt="Mike" style="width:100%">
           <div class="container">
             <h2>Sayan Somya</h2>
             <p class="title">Content head</p>
