--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </p>
     </div>
     <div class="col-md-5 col-second">
-    <img src="./ssc/ssclogo2.png" class="middle-logo" />
+    <img src="./ssc/ssclogo2.png" class="middle-logo overflow-hidden" />
    </div>
 </div>
 </section>
@@ -126,7 +126,7 @@
             <a href="https://forms.gle/Dr4eTkjXZFEtcubh7"><button type="button" class="btn btn-outline-primary btn-lg px-4">Give suggestions</button> </a>
           </div>
         </div>
-        <div class="overflow-hidden" style="max-height: 30vh;">
+        <div style="max-height: 30vh;">
           <div class="container px-5">
             <img src="./ssc/flood rc.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
           </div>
